[490601] Cleaned all usage of number constructors
replaed new Integer and new Character with more efficient valueOf or
toString methods as reported by sonarqube

Bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=490601
Signed-off-by: Alois Zoitl <alois.zoitl@gmx.at>